@@ -10,6 +10,7 @@ Version 1.7.8+svn:
    * Updated music tracks: Legends of the North, Breaking the Chains
  * User interface:
    * Show selected item after a listbox resize (bug #13995)
+   * Increasing the size of the MP lobby works properly (bug #14759)
 
 Version 1.7.8-beta1:
  * Campaigns:
